@@ -19,6 +19,7 @@
  - [2513300] Fix for bug [1774958] Nested folders do not export correctly
  - Fix for SF bug [2086481] xmlui Administrative log in as another eperson
  - Fix for SF bug [2155479] Submission verify page handles dc.identifier.* incorrectly
+ - [DS-60] netid.toLowerCase() in different classes and methods - ID: 2458187
  
 (Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini / Paulo Matos)
  - [2057378] Hierarchical LDAP support
